# BookNetwork

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yaml  entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: flake8.yml
backend/: Dockerfile  requirements.txt
backend/api/: emails.py  settings.py
backend/booknetwork/: asgi.py  settings.py  wsgi.py
backend/certs/: jwt-private.pem  jwt-public.pem
backend/requirements/: dev.txt  prod.txt
backend/src/: main.py
booknetwork/: Dockerfile  manage.py
booknetwork/api/: emails.py  settings.py  tasks.py
booknetwork/booknetwork/: celery.py  settings.py  urls.py
booknetwork/requirements/: prod.txt
booknetwork_frontend/: README.md  package.json
booknetwork_frontend/src/: App.vue  main.js
booknetwork_frontend/views/: Activation.vue  Dashboard.vue  Login.vue
docs/: Auth.md  BACKLOG.md  BackendToDo.md  FrontendToDo.md  MobileToDO.md  StartWork.md  TASK.md
frontend/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.vue
src/: cli.py  main.py  requirements.txt
src/admin/: __init__.py  auth.py  author.py  book.py  genre.py  review.py  user.py
src/alembic/: env.py
src/config/: config.py
src/core/: config.py  database.py
src/crud/: users.py
src/db/: database.py
src/dependencies/: auth.py
src/handlers/: add_book.py  book.py  handlers.py  user.py  users.py
(+188 files in other folders)
