[project]
name = "bookbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
]
